# mandelbrot-generator

./: CMakeLists.txt  LICENSE.txt  README.md
palettes/: rgb-double-green.txt  rgb-double-red.txt  rgb-linear-green.txt  rgb-linear-red.txt
scripts/: center-on-coord.sh  sequence-generator.sh
src/: antialiasing.c  complex-plane.c  complex.c  configuration.c  data.c  image.c  main.c  mandelbrot.c  palette.c  parallel.c  processing.c
src/include/: antialiasing.h  complex-plane.h  complex.h  configuration.h  data.h  debug.h  image.h  main.h  mandelbrot.h  palette.h  parallel.h  processing.h
